--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "nodemon --exec babel-node ./server/app.js",
     "start:dev": "npm run reset:db && npm run dev",
     "build": "rm -rf dist && mkdir dist && babel -d ./dist ./server -s",
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run build",
+    "test": "nyc mocha --require @babel/polyfill --require @babel/register ./server/test/index.js --timeout 10000 --exit",
     "lint": "eslint ./server --fix"
   },
   "repository": {
@@ -43,20 +45,26 @@
     "@babel/node": "^7.2.2",
     "@babel/polyfill": "^7.4.4",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
+    "mocha": "^6.1.4",
     "morgan": "^1.9.1",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "nyc": "^14.1.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.4.4",
+    "@babel/register": "^7.4.4",
     "babel-eslint": "^8.2.6",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
     "husky": "^2.2.0",
-    "lint-staged": "^8.1.6"
+    "lint-staged": "^8.1.6",
+    "mocha-lcov-reporter": "^1.3.0"
   }
 }
