--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,5 +33,5 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      - run: npm tests
+      - run: npm test
       - run: npm run coverage
