--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,6 @@
 {
   "root": true,
-  "extends": [
-    "airbnb-base"
-  ],
+  "extends": ["airbnb-base"],
   "env": {
     "node": true,
     "es6": true,
@@ -16,10 +14,8 @@
     "consistent-return": 0,
     "no-param-reassign": 0,
     "comma-dangle": 0,
-    "curly": [
-      "error",
-      "multi-line"
-    ],
+    "object-property-newline": 1,
+    "curly": ["error", "multi-line"],
     "import/no-unresolved": [
       2,
       {
@@ -29,21 +25,11 @@
     "no-shadow": [
       "error",
       {
-        "allow": [
-          "req",
-          "res",
-          "err"
-        ]
+        "allow": ["req", "res", "err"]
       }
     ],
-    "function-paren-newline": [
-      "error",
-      "never"
-    ],
-    "indent": [
-      2,
-      2
-    ],
+    "function-paren-newline": ["error", "never"],
+    "indent": [2, 2],
     "valid-jsdoc": [
       "error",
       {
