--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^6.1.4",
     "morgan": "^1.9.1",
+    "mysql": "^2.17.1",
     "nodemon": "^1.19.0",
     "nyc": "^14.1.1"
   },
