--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           DB_HOST: localhost
           DB_USER: root
           DB_PASSWORD: ""
-          DB_NAME: shopmate
+          DB_NAME: shopmate5000
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -20,10 +20,8 @@ jobs:
       # - image: circleci/mongo:3.4.4
       - image: circleci/mysql:5.7
         environment:
-          DB_HOST: localhost
-          DB_USER: root
-          DB_PASSWORD: ""
-          DB_NAME: shopmate
+          MYSQL_ROOT_HOST: "%"
+          MYSQL_ROOT_PASSWORD: shopmate5000
 
     working_directory: ~/shopmate-backend
 
@@ -45,8 +43,12 @@ jobs:
           name: Install MySQL CLI
           command: |
             sudo apt-get install mysql-client
-            mysql -h 127.0.0.1 -u user -ppassw0rd shopmate < server/database/sql-data/shopmate.sql
-            mysql -h 127.0.0.1 -u user -ppassw0rd --execute="SELECT * FROM shopmate.category"
+
+      - run:
+          name: Install demo database
+          command: |
+            mysql -h$DB_HOST -u$DB_USERNAME -p$DB_PASSWORD $DB_DATABASE < server/database/sql-data/shopmate.sql
+            mysql -h$DB_HOST -u$DB_USERNAME -p$DB_PASSWORD $DB_DATABASE --execute="SELECT * FROM shopmate.category"
 
       # Download and cache dependencies
       - restore_cache:
