--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           DB_HOST: 127.0.0.1
           DB_PORT: 3306
           DB_USER: root
-          DB_PASSWORD: root
+          DB_PASSWORD: shopmate5000
           DB_NAME: shopmate5000
 
       # Specify service dependencies here if necessary
