--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,9 +49,8 @@ jobs:
       - run:
           name: Install demo database
           command: |
-            mysql -u$DB_USER -p$DB_PASSWORD -e "create database shopmate"
-            mysql -h$DB_HOST -u$DB_USER -p$DB_PASSWORD $DB_NAME < server/database/sql-data/shopmate.sql
-            mysql -h$DB_HOST -u$DB_USER -p$DB_PASSWORD $DB_NAME --execute="SELECT * FROM shopmate.category"
+            mysql -h 127.0.0.1 -u root -pshopmate5000 shopmate5000 < server/database/sql-data/shopmate.sql
+            mysql -h 127.0.0.1 -u root -pshopmate5000 --execute="SELECT * FROM shopmate.category"
 
       # Download and cache dependencies
       - restore_cache:
