--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           DB_PORT: 3306
           DB_USER: root
           DB_PASSWORD: shopmate5000
-          DB_NAME: shopmate5000
+          DB_NAME: shopmate
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -49,7 +49,7 @@ jobs:
       - run:
           name: Install demo database
           command: |
-            mysql  -h 127.0.0.1 -u root -pshopmate5000 -e "create database shopmate;"
+            mysql  -h 127.0.0.1 -u root -p shopmate5000 -e "create database shopmate;"
             mysql -h$DB_HOST -u$DB_USER -p$DB_PASSWORD $DB_NAME < server/database/sql-data/shopmate.sql
             mysql -h$DB_HOST -u$DB_USER -p$DB_PASSWORD $DB_NAME --execute="SELECT * FROM shopmate.category"
 
