--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
         environment:
           MYSQL_ROOT_HOST: "%"
           MYSQL_ROOT_PASSWORD: shopmate5000
-        command: mysqld --sql-mode=STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION
+        command: mysqld --sql-mode=NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION
 
     working_directory: ~/shopmate-backend
 
