--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.0",
-    "nyc": "^14.1.1"
+    "nyc": "^14.1.1",
+    "stripe": "^7.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.4.4",
