--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
     "@babel/polyfill": "^7.4.4",
+    "axios": "^0.18.0",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
@@ -58,6 +59,7 @@
     "mysql": "^2.17.1",
     "nodemon": "^1.19.0",
     "nyc": "^14.1.1",
+    "passport": "^0.4.0",
     "stripe": "^7.0.0"
   },
   "devDependencies": {
