--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
     "mocha": "^6.1.4",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
